--- a/style.css
+++ b/style.css
@@ -3,8 +3,53 @@ body {
   padding: 0;
 }
 
-#gameContainer {
+.container {
   width: 800px;
   margin: 0 auto;
-  margin-top: 2em;
+  margin-top: 1em;
+  position: relative;
+}
+
+#gameContainer {
+  /*position: absolute;*/
+}
+
+#ui {
+  display: flex;
+  justify-content: space-around;
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.66);
+  width: 800px;
+  font-family: Calibri, "Open Sans", Roboto, Lato, "Droid Sans", "PT Sans", Ubuntu, sans-serif
+}
+
+#ui ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+#ui li {
+  float: left;
+  margin: auto; 
+  padding: 0.5em 1.5em;
+  overflow: hidden;
+}
+
+#ui p {
+  margin: 0;
+}
+
+em {
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+  font-style: normal;
+  font-weight: bold;
+  color: #000066;
+}
+
+a {
+  color: #000066;
+  text-decoration: none;
 }
